--- a/src/stories/Foundation/doc/doc.mdx
+++ b/src/stories/Foundation/doc/doc.mdx
@@ -23,6 +23,8 @@ import * as DocStories from './doc.stories';
   </li>
 </ul>
 
+# 시작하기
+
 ## 전처리 스크립트 실행 방법
 
 해당 토큰은 figma에서 token-studio를 통해 다운로드하며, 단일한 JSON 파일 형식으로 다운받으면 됩니다.
@@ -53,3 +55,46 @@ npm install --save-dev style-dictionary@4.0.0 @tokens-studio/sd-transforms@1.3.0
 ```bash
 npm run resolveToken
 ```
+
+# 동작 방식
+
+디자인 시스템은 가장 저 계층인 token 부터 실제로 사용하는 component 까지 다음 계층들로 구성됩니다.
+
+token
+프로젝트에서 사용할 css 값들을 key-value 형식으로 미리 저장해놓은 것
+일관적인 css 사용을 위함
+
+primitive
+토큰 내에서 가장 저 계층의 값. 실제 css 속성 값을 저장
+종류 : color, typo, number
+
+semantic
+primitive를 바탕으로, surface, button, box, input 등 의미론적 단위의 디자인 토큰을 구성
+다크모드/라이트 모드에 따라 mode, 반응형 폰트 및 레이아웃에 따라 responsive로 구분
+
+    mode
+
+       light - 라이트 모드, high-contrast - 고대비/다크 모드
+
+    responsive
+
+      pc, mobile로 구분
+
+variant
+
+token을 조합하여 몇 가지 css 템플릿을 만든 것입니다.
+모든 컴포넌트는 5타입의 베리언트를 가집니다.
+
+$color - 색상 관련 값. 라이트 모드, 다크 모드로 구분됩니다. background-color, color
+
+$typo: 폰트, 글자 크기, 줄 간격 등 타이포그래피 관련 값
+
+$shape: 테두리 반경, 테두리 두께 등 도형(모양) 관련 값
+
+$layout: 마진, 패딩, 그리드 등 레이아웃 관련 값
+
+$elevation: 그림자, 입체감(레이어) 관련 값
+
+baseCss
+
+component(atom)
